--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/SessionTimeOut/v15/Server/sqlite3
+/.vs/SessionTimeOut/v15/.suo
+/.vs/SessionTimeOut/v15
+/packages
